--- a/package.json
+++ b/package.json
@@ -14,38 +14,40 @@
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "^2.0.1",
-    "ember-bootstrap": "0.11.1",
-    "ember-cli": "2.10.0-beta.2",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.6",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.4.0",
+    "bootstrap-sass": "^3.3.7",
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-ajax": "^3.1.0s",
+    "ember-bootstrap": "^1.2.2",
+    "ember-browserify": "^1.2.2",
+    "ember-cli": "3.1.3",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-babel": "^6.12.0",
+    "ember-cli-dependency-checker": "^2.1.0",
+    "ember-cli-htmlbars": "^2.0.3",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
+    "ember-cli-inject-live-reload": "^1.7.0",
     "ember-cli-jshint": "^1.0.0",
-    "ember-cli-mirage": "0.2.4",
-    "ember-cli-moment-shim": "2.2.1",
-    "ember-cli-qunit": "^2.1.0",
+    "ember-cli-mirage": "0.4.7",
+    "ember-cli-moment-shim": "^3.7.1",
+    "ember-cli-qunit": "^4.3.2",
     "ember-cli-release": "^0.2.9",
-    "ember-cli-sass": "5.6.0",
+    "ember-cli-sass": "7.1.7",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
+    "ember-cli-test-loader": "^2.2.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.8.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-font-awesome": "2.2.0",
-    "ember-load-initializers": "^0.5.1",
-    "ember-moment": "6.1.0",
-    "ember-power-calendar": "0.1.6",
-    "ember-power-select": "1.0.0-beta.29",
-    "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.1"
+    "ember-data": "^3.1.1",
+    "ember-export-application-global": "^2.0.0",
+    "ember-font-awesome": "4.0.0-rc.3",
+    "ember-load-initializers": "^1.1.0",
+    "ember-moment": "^7.7.0",
+    "ember-power-calendar": "^0.7.2",
+    "ember-power-select": "^2.0.1",
+    "ember-resolver": "^4.5.5",
+    "loader.js": "^4.7.0"
   }
 }
